Try again to stabilize CI moving stateful suites out of async mode
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>